--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -1,4 +1,15 @@
-#top_splash_image {
-    height: 30%;
-    width: 80%;
+#top-splash-image-div {
+    width: 100%;
+    height: 200px;
+    background-image: url(https://res.cloudinary.com/dymmlu1dw/image/upload/v1661817134/soundcloud/pexels-andrea-piacquadio-813940_orqq1x.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
+
+#splash-call-to-action {
+    width: 80%;
+    height: 15%;
+    background-color: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5))
+}
+
