--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -1,15 +1,20 @@
 #top-splash-image-div {
-    width: 100%;
-    height: 200px;
-    background-image: url(https://res.cloudinary.com/dymmlu1dw/image/upload/v1661817134/soundcloud/pexels-andrea-piacquadio-813940_orqq1x.jpg);
+    width: 80%;
+    height: 300px;
+    background-image: url(https://res.cloudinary.com/dymmlu1dw/image/upload/v1661823790/soundcloud/pexels-andrea-piacquadio-3800507_oghljx.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 50% 30%;
 }
 
 #splash-call-to-action {
     width: 80%;
-    height: 15%;
-    background-color: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5))
+    height: 20%;
+    background-color: black;
+}
+
+#call-to-action-text {
+    padding: 15px;
+    color: white;
 }
 
