--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -8,6 +8,16 @@
     background-position: 50% 30%;
 }
 
+#top-logged-in-splash-image-div {
+    margin:auto;
+    width: 80%;
+    height: 300px;
+    background-image: url(https://res.cloudinary.com/dymmlu1dw/image/upload/v1661992780/soundcloud/pexels-april-studio-7745126_jcdilb.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
 #splash-call-to-action {
     margin: auto;
     width: 80%;
