--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -4,14 +4,21 @@
 
 .nav-text {
     color: #ccc;
+    font-size: large;
+    font-weight: bold;
 }
 
 .nav-item {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
+    margin: 0px 10px 0px 10px;
 }
 
 #all-nav-items {
-    display: inline;
+    display: inline-flex;
+}
+
+.profile-dropdown {
+    color: #ccc;
 }
