--- a/frontend/src/components/AlbumDetailPage/AlbumDetailPage.css
+++ b/frontend/src/components/AlbumDetailPage/AlbumDetailPage.css
@@ -1,10 +1,10 @@
-.song-detail {
+.album-detail {
     display: flex;
     justify-content: center;
     width: 80%;
     margin: auto;
 }
-.song-list-image {
+.album-detail-image {
     height: 150px;
     width: 150px;
     background-size: cover;
@@ -13,14 +13,21 @@
 }
 
 
-.song-list-item {
+.album-detail-info {
     display: inline-flex;
     background-color: rgb(199, 193, 193);
     width: 100%;
-    font-size: 30px;
-
 }
 
 li{
     list-style: none;   
+}
+
+#album-title {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#album-artist {
+    font-size: 20px;
 }
