--- a/frontend/src/components/SongDetailPage/SongDetailPage.css
+++ b/frontend/src/components/SongDetailPage/SongDetailPage.css
@@ -4,7 +4,7 @@
     width: 80%;
     margin: auto;
 }
-.song-list-image {
+.song-detail-image {
     height: 150px;
     width: 150px;
     background-size: cover;
@@ -13,14 +13,21 @@
 }
 
 
-.song-list-item {
+.song-detail-info {
     display: inline-flex;
     background-color: rgb(199, 193, 193);
     width: 100%;
-    font-size: 30px;
-
 }
 
 li{
     list-style: none;   
+}
+
+#song-title {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#song-artist {
+    font-size: 20px;
 }
