--- a/frontend/src/components/AllSongsPage/AllSongsPage.css
+++ b/frontend/src/components/AllSongsPage/AllSongsPage.css
@@ -15,9 +15,12 @@
 
 .song-list-item {
     display: inline-flex;
+    justify-content: left;
     background-color: rgb(199, 193, 193);
-    width: 100%;
+    width: 500px;
     font-size: 30px;
+    flex-shrink: 0;
+    border-radius: 3px;
 
 }
 
