--- a/frontend/src/components/AlbumDetailPage/AlbumDetailPage.css
+++ b/frontend/src/components/AlbumDetailPage/AlbumDetailPage.css
@@ -15,8 +15,11 @@
 
 .album-detail-info {
     display: inline-flex;
-    background-color: rgb(199, 193, 193);
+    background-color: rgb(71, 71, 71);
     width: 100%;
+    color: #ccc;
+    margin-top: 20px;
+    margin-right: 5px;
 }
 
 li{
@@ -30,4 +33,8 @@ li{
 
 #album-artist {
     font-size: 20px;
+}
+
+.album-detail-buttons {
+    margin-top: 20px;
 }
