--- a/frontend/src/components/AllAlbumsPage/AllAlbumsPage.css
+++ b/frontend/src/components/AllAlbumsPage/AllAlbumsPage.css
@@ -29,3 +29,12 @@ li{
     font-size: 30px;
     font-weight: bold;
 }
+
+.all-albums-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 10px;
+}
