--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -3,6 +3,7 @@ form {
     flex-direction: column;
     /* align-items: center; */
     justify-content: center;
+    margin-top: 40px;
 }
 
 label {
@@ -23,4 +24,10 @@ button {
     height: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 2px;
+}
+
+.whole-login-page {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
