--- a/frontend/src/components/SongDetailPage/SongDetailPage.css
+++ b/frontend/src/components/SongDetailPage/SongDetailPage.css
@@ -3,24 +3,38 @@
     justify-content: center;
     width: 80%;
     margin: auto;
+    margin-top: 70px;
 }
 .song-detail-image {
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 300px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 30%;
 }
 
-
 .song-detail-info {
     display: inline-flex;
-    background-color: rgb(71, 71, 71);
-    width: 100%;
+    background: linear-gradient(rgb(71, 71, 71), rgb(156, 152, 152));
+    width: 80%;
     color: #ccc;
-    margin-top: 20px;
-    margin-right: 5px;
+    padding: 20px;
+    justify-content: space-between;
 }
+
+.song-detail-ul {
+    margin: 0px;
+    padding: 0px;
+}
+
+.song-detail-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* .song-url {
+} */
 
 li{
     list-style: none;   
