--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -32,11 +32,11 @@
 }
 
 .guest-splash-photo-text2 {
-    margin-left: 100px;
+    margin-right: 100px;
     font-size: 60px;
     font-weight: bold;
     color: black;
-    z-index: 10;
+    z-index: 2;
 }
 
 .loggedin-splash-photo-text1 {
